--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
+	<P>I want to become a developer because I want a high paying 
+		job</P>
     <script type="text/javascript" src="./script.js">
 </script>
 
